# damask

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/damask/: Cargo.toml
crates/damask-macros/: Cargo.toml  README.md
crates/damask-macros/src/: codegen.rs  lib.rs  props.rs  resolve.rs
crates/damask-template/: Cargo.toml  README.md
crates/damask-template/src/: lib.rs  line_index.rs  lower.rs  parser.rs
crates/damask/src/: lib.rs  props.rs  renderers.rs
crates/damask/tests/: trybuild.rs
crates/damask/tests/ui/: template_without_path.rs  template_without_path.stderr  unknown_template_option.rs  unknown_template_option.stderr
crates/rsc/: Cargo.toml
crates/rsc-macros/: Cargo.toml
crates/rsc-macros/src/: codegen.rs  input.rs  lib.rs  props.rs  resolve.rs
crates/rsc-template/: Cargo.toml
crates/rsc-template/src/: host.rs  lib.rs  line_index.rs  lower.rs  parser.rs
crates/rsc/src/: attr.rs  lib.rs  props.rs  renderers.rs
crates/rsc/tests/: trybuild.rs
crates/rsc/tests/ui/: template_without_path.rs  unknown_template_option.rs
editors/zed/: .gitignore  Cargo.toml  README.md  dev-setup.sh  extension.toml
editors/zed/languages/damask/: config.toml  highlights.scm
editors/zed/languages/rsc/: config.toml  highlights.scm  indents.scm  injections.scm
editors/zed/src/: lib.rs
examples/dashboard/: Cargo.toml
examples/dashboard/src/: dashboard.rs  dashboard.rsc  deploy_feed.dmk  deploy_feed.rs  deploy_feed.rsc  lib.rs  main.rs  model.rs  page.dmk  page.rs  page.rsc  service_table.dmk  service_table.rs  service_table.rsc  site_footer.rs  site_footer.rsc  site_header.dmk  site_header.rs  site_header.rsc  status_badge.rs  status_badge.rsc  theme.css  theme.rs
examples/dashboard/tests/: render.rs
examples/showcase/: Cargo.toml
examples/showcase/src/: board.rs  board.rsc  button.dmk  button.html.rsc  button.rs  card.html.rsc  card.rs  card.rsc  control.rs  control.rsc  custom_renderer.rs  dialog.dmk  dialog.rs  frame.rs  frame.rsc  greeting.html.rsc  greeting.rs  greeting.rsc  layout.html.rsc  layout.rs  layout.rsc  lib.rs  list.dmk  list.html.rsc  list.rs  list.rsc  main.rs  menu.dmk  menu.rs  menu.rsc  notice.rs  notice.rsc  page.dmk  page.rs  page.rsc  panel.html.rsc  panel.rs  panel.rsc  shell.dmk  shell.rs  (+5 more)
examples/showcase/tests/: render.rs  ui.rs
examples/showcase/tests/ui/: missing_required_prop.rs  missing_required_prop.stderr
site/: Cargo.toml  README.md
site/assets/: site.js
site/content/: book.md  docs.md  home.md
site/content/book/: 01-why.md  02-your-first-component.md  03-the-template-language.md  04-attributes.md  05-composition.md  06-snippets.md  07-rendering.md  08-building-a-page.md
site/content/docs/: 01-overview.md  10-tags.md  11-attributes.md  12-class-lists.md  20-derive.md  21-props.md  22-slots.md  23-snippets.md  30-traits.md  31-renderers.md  40-tooling.md
site/src/: content.rs  highlight.rs  links.rs  main.rs  markdown.rs  search.rs  urls.rs
site/src/view/: chrome.rs  mod.rs
site/src/view/layouts/: base.dmk  base.rs  mod.rs  shell.dmk  shell.rs
site/src/view/pages/: article.dmk  article.rs  home.dmk  home.rs  index.dmk  index.rs  mod.rs
site/src/view/ui/: action.dmk  action.rs  ground.dmk  ground.rs  mark.dmk  mark.rs  mod.rs  page_card.dmk  page_card.rs  pager.dmk  pager.rs  panel.dmk  panel.rs  sidebar.dmk  sidebar.rs  templates.dmk  templates.rs  toc.dmk  toc.rs
site/syntaxes/: damask.sublime-syntax
site/ui/: app.css
skills/damask/: SKILL.md
skills/rsc/: SKILL.md
tools/: build-site.sh  get-tailwind.sh
tools/damask-lsp/: Cargo.toml  README.md
tools/damask-lsp/src/: analysis.rs  backend.rs  html_doc.rs  introspect.rs  locate.rs  lsp_client.rs  main.rs  virtual_file.rs
tools/rsc-lsp/: Cargo.toml
tools/rsc-lsp/src/: analysis.rs  backend.rs  html_doc.rs  introspect.rs  lsp_client.rs  main.rs  virtual_file.rs
