[workspace]
resolver = "3"
members = [
    "crates/damask",
    "crates/damask-macros",
    "crates/damask-template",
    "tools/damask-lsp",
    "examples/showcase",
    "examples/dashboard",
    "site",
]
# The Zed extension is a separate wasm crate with its own toolchain target.
exclude = ["editors/zed"]

[workspace.package]
version = "0.1.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/jwo1f/damask"
authors = ["Damask contributors"]
rust-version = "1.88"

[workspace.dependencies]
damask = { path = "crates/damask", version = "0.1.2" }
damask-macros = { path = "crates/damask-macros", version = "0.1.2" }
damask-template = { path = "crates/damask-template", version = "0.1.2" }

proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits", "parsing"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
