[package]
name = "damask-macros"
description = "Procedural macros for Damask: the `Component` derive."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["template", "component", "html", "macro", "derive"]
categories = ["template-engine", "web-programming"]

[lib]
proc-macro = true

[dependencies]
damask-template.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[lints]
workspace = true
