[package]
name = "rsc-macros"
description = "Procedural macros for RSC (Rust Smart Components): the `component!` macro."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
rsc-template.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[lints]
workspace = true
