[package]
name = "rsc-template"
description = "Template parser for RSC (Rust Smart Components). Shared by the macro and the language server."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[lints]
workspace = true
