[package]
name = "rsc"
description = "RSC (Rust Smart Components): React-like, compile-time components for Rust."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "../../README.md"
keywords = ["template", "component", "html", "macro", "render"]
categories = ["template-engine", "web-programming"]

[dependencies]
rsc-macros.workspace = true

[dev-dependencies]
trybuild = "1"

[lints]
workspace = true
