[package]
name = "rsc-dashboard"
description = "A full HTML page built from composed RSC components."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
rsc.workspace = true

[lints]
workspace = true
