[package]
name = "damask-dashboard"
description = "A full HTML page built from composed Damask components."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
damask.workspace = true

[lints]
workspace = true
