[package]
name = "rsc-showcase"
description = "Runnable RSC example components."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
rsc.workspace = true

[dev-dependencies]
trybuild = "1"

[lints]
workspace = true
