[package]
name = "damask-showcase"
description = "Runnable Damask example components."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
damask.workspace = true

[dev-dependencies]
trybuild = "1"

[lints]
workspace = true
